Sun Oct  5 23:05:53 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_mod_modfunc): method undefined in included module
	  may not have nd_body.  [ruby-core:18738]

Wed Oct  1 19:11:48 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (marshal_dump): fixed for check_dump_arg.

	* marshal.c (marshal_dump): initializes dump_arg before any funcall.
	  [ruby-dev:36648]

Sat Sep 27 04:28:41 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rmext): preceding dots are not a part of extension.

	* file.c (rb_file_s_extname): ditto.

Sat Sep 27 03:12:40 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/socket.c (host_str): numeric address should be unsigned.
	  [ruby-core:18971]

Fri Sep 26 18:24:28 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el: safe custimizable variables.

Wed Sep 24 14:40:21 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/tmpdir.rb: setup buffer with nul characters instead of spaces.
	  fixed [ruby-dev:36493]

Wed Sep 24 14:11:59 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/rexml/formatters/pretty.rb (REXML::Formatters::Pretty#wrap):
	  abandon wrapping if the line contains no space.  [ruby-dev:36045]
	  fix: #342

Tue Sep 23 19:50:24 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (subtruct): check tv_sec.

Tue Sep 23 19:30:41 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (filetime_to_timeval): new function, split from
	  gettimeofday().

	* win32/win32.c (gettimeofday): use above function.

	* win32/win32.c (filetime_to_unixtime): ditto. [ruby-dev:36135]

Tue Sep 23 16:59:45 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (ENVMATCH, ENVNMATCH): reduced same code.

Tue Sep 23 08:20:59 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* misc/ruby-mode.el: updated to the latest trunk (without encoding
	  magic comment hook).

	* misc/ruby-mode.el (ruby-keyword-end-re): emacs21 support.  a
	  patch from Hiroshi Moriyama <hiroshi at kvd.biglobe.ne.jp> in